--- a/index.html
+++ b/index.html
@@ -1,33 +1,31 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Streaming Media Assignment</title>
-        
-        <meta name="author" content="Danielle Myers">
-        <meta name="description" content="streamingmedia assignment to practice responsive web design in GIT 337">
-
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link rel="stylesheet" href="styles.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles.css" rel="stylesheet">
+    <title>MuzakMaker- Smooth Jazz</title>
+</head>
     <body>
         <header>
-            <h1>MuzakMaker</h1>
-            <h2>Smooth Jazz</h2>
-                <p>This station is dedicated to the soothing sounds of smooth jazz. This genre of commercially oriented crossover jazz became dominant in the 1980s and early 1990s.</p>
-            <nav>
-                <ul>
-                    <li><a href="#">MuzakMaker</a></li>
-                    <li><a href="#trending-songs">Trending Songs</a></li>
-                    <li><a href="#your-playlists">Your Playlists</a></li>
-                    <li><a href="#curated-playlists">Curated Playlists</a></li>
-                    <li><a href="#"><img src="StreamingMedia/images/duke-silver.png" alt="profile picture of the character duke silver of the television sitcom, parks and recreation"></a></li>
-                </ul>
-            </nav>
+            <h1>Smooth Jazz</h1>
+            <p>This station is dedicated to the soothing sounds of smooth jazz. This genre of commercially oriented crossover jazz became dominant in the 1980s and early 1990s.</p>
         </header>
+        <nav>
+            <h2>Main Navigation</h2>
+                <input type="checkbox" id="dropdown" />
+                <label for="dropdown"><span></span></label>
+            <ul>
+                <li><a href="#home">MuzakMaker</a></li>
+                <li><a href="#trending">Trending <br />Songs</a></li>
+                <li><a href="#playlists">Your  <br />Playlists</a></li>
+                <li><a href="#curated">Curated  <br />Playlists</a></li>
+                <li><a href="user"><img src="images/duke-silver.png" alt="user profile picture"></a></li>
+            </ul>
+        </nav>
     <main>
-        <section id="trending-songs"><h2>Trending Songs</h2>
+        <section id="trending"><h2>Trending Songs</h2>
             <h3>Aloma</h3>
             <p>Artist Cali</p>
             <img src="StreamingMedia/images/aloma-cover.png" alt="cover art image of a white dove soaring for the song Aloma by the artist named Cali"> 
@@ -70,7 +68,7 @@
         <p>More trending</p>
         </section>
 
-        <section id="your-playlists"><h2>Your Playlists</h2>
+        <section id="playlists"><h2>Your Playlists</h2>
             <img src="StreamingMedia/images/best-of-2020-cover.png" alt="image of a glowing year of 2020 sign on a black background">
             <h3>Best of 2020</h3>
             <p>The music that got you through the lock down.</p>
@@ -94,7 +92,7 @@
             <p>All your playlists</p>
         </section>
 
-        <section id="curated-playlists"><h2>Curated Playlists</h2>
+        <section id="curated"><h2>Curated Playlists</h2>
             <img src="StreamingMedia/images/boozy-brunch-cover.png" alt="image of a group of friends and their hands cheersing their drinks">
             <h3>Boozy Brunch</h3>
             <p>Light up the afternoon with these energetic hits.</p>
@@ -119,6 +117,8 @@
         
         </section>
     </main>
-    <footer>Copyright 2022 Smooth Jazz</footer>
+    <footer>
+        <p>Copyright 2022 Smooth Jazz</p>
+    </footer>
     </body>
 </html>
