added css styles

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
         <nav>
                 <input type="checkbox" id="dropdown" />
                 <label for="dropdown"><span></span></label>
+                <span class="container"></span>
             <ul>
                 <li><a href="#home">MuzakMaker</a></li>
                 <li><a href="#trending">Trending <br />Songs</a></li>
                 <li><a href="#playlists">Your  <br />Playlists</a></li>
                 <li><a href="#curated">Curated  <br />Playlists</a></li>
-                <li><a href="user"><img src="images/duke-silver.png" alt="user profile picture"></a></li>
+                <li><a href="user"><img src="StreamingMedia/images/duke-silver.png" alt="user profile picture"></a></li>
             </ul>
         </nav>
     <main>
@@ -30,7 +31,7 @@
             <section>
             <div>
                 <h3>Aloma</h3>
-                <p>Artist Cali</p>
+                <p><span class="artist">Artist</span> Cali</p>
             </div>
                 <img src="StreamingMedia/images/aloma-cover.png" alt="cover art image of a white dove soaring for the song Aloma by the artist named Cali"> 
                 <audio controls>
@@ -41,7 +42,7 @@
             <section>
             <div>
                 <h3>My Road</h3>
-                <p>Artist Nesterouk</p>
+                <p><span class="artist">Artist</span> Nesterouk</p>
             </div>
                 <img src="StreamingMedia/images/my-road-cover.png" alt="cover art image of an empty road leading to a mountain range in the background for the song My Road by the artist Nesterouk"> 
                 <audio controls>
@@ -52,7 +53,7 @@
             <section>
             <div>
                 <h3>Papaya</h3>
-                <p>Artist Dredstudio</p>
+                <p><span class="artist">Artist</span> Dredstudio</p>
             </div> 
                 <img src="StreamingMedia/images/papaya-cover.png" alt="cover art image of a ripe papaya cut in half for the song Papaya by the artist Dredstudio"> 
                 <audio controls>
@@ -63,7 +64,7 @@
             <section>
             <div>
                 <h3>Smoothies</h3>
-                <p>Artist Black Rhomb</p>
+                <p><span class="artist">Artist</span> Black Rhomb</p>
             </div>
                 <img src="StreamingMedia/images/smoothies-cover.png" alt="cover art image of a strawberry smoothie in a mason jar with fresh ingredients of pineapple, strawberries, and bananas surrounding it for the song Smoothies by the artist Black Rhomb"> 
                 <audio controls>
@@ -74,7 +75,7 @@
             <section>
             <div>
                 <h3>Succesful Performance</h3>
-                <p>Artist Ricky Bombino</p>
+                <p><span class="artist">Artist</span> Ricky Bombino</p>
             </div>
                 <img src="StreamingMedia/images/successful-performance-cover.png" alt="cover art image of a white man with a red shirt, standing in front of a blue brick wall looking celebratory for the Successful Performance by the artist Ricky Bombino"> 
                 <audio controls>
